@@ -17,8 +17,10 @@ class EEAFixture(PloneSandboxLayer):
         """
         import eea.dataservice
         import eea.workflow
+        import Products.EEAContentTypes
         self.loadZCML(package=eea.dataservice)
         self.loadZCML(package=eea.workflow)
+        self.loadZCML(package=Products.EEAContentTypes)
 
         try:
             import eea.rdfmarshaller
